--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,25 @@
+@font-face {
+    font-family: PixelSplitter-Bold;
+    src: url(../resources/fonts/PixelSplitter-Bold.ttf);
+}
+
+.title {
+    margin-top: 5%;
+    font-size: 70px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-family: PixelSplitter-Bold, sans-serif;
+}
+
+.leaderboardTable {
+    margin: 5% auto;
+    width: 30%;
+    text-align: center;
+    font-size: 30px;
+    font-family: PixelSplitter-Bold, sans-serif;
+}
+
 .background {
     position: fixed;
     top: -50%;
@@ -16,15 +38,3 @@
     min-width: 50%;
     min-height: 50%;
 }
-
-.test {
-    color: red;
-}
-
-/*html {*/
-    /*background: url(../resources/img/background.jpg) no-repeat center center fixed;*/
-    /*-webkit-background-size: cover;*/
-    /*-moz-background-size: cover;*/
-    /*-o-background-size: cover;*/
-    /*background-size: cover;*/
-/*}*/
