--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,12 +12,41 @@
     font-family: PixelSplitter-Bold, sans-serif;
 }
 
+.gameIdtextFieldDiv {
+    display: block;
+    margin-top: 2%;
+    text-align: center;
+}
+
+.gameIdtextField {
+    margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 20px;
+    font-family: PixelSplitter-Bold, sans-serif;
+}
+
 .leaderboardTable {
     margin: 5% auto;
     width: 30%;
     text-align: center;
     font-size: 30px;
     font-family: PixelSplitter-Bold, sans-serif;
+}
+
+table {
+    border-collapse: separate;
+    border-spacing: 50px 0;
+}
+
+td {
+    padding: 10px 0;
+}
+
+th {
+    text-align: center;
+    padding: 10px 0;
+    color: white;
 }
 
 .background {
